Semantic-ui setup

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to Photo App 6</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="ui container">
+  <h1>Welcome to Photo App 6</h1>
+  <p>Find me in app/views/welcome/index.html.erb</p>
+</div>
