--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
         </div>
         <div class="ui eight wide column">
           <% flash.each do |key, value|%>
-            <div class="<%= flash_class(key) %> closable">
+            <!-- <div class="<%= flash_class(key) %> closable"> -->
+            <div class="ui green message closable">
               <i class = "close icon"></i>
               <%= value %>
             </div>
