Change setting to new apikey

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,41 @@
 <div class="ui container">
   <h1>Welcome to Photo App 6</h1>
-  <div class="ui horizontal divider">With text</div>
-  <p>Find me in app/views/welcome/index.html.erb</p>
+  <div class="ui horizontal divider"></div>
+
+
+  <div class="ui three column stackable grid">
+    <div class="ui centered row">
+      <div class="sixteen wide column">
+        <div class="ui segment jumbotron">
+          Welcome to Photo management app
+        </div>
+      </div>
+    </div>
+    <div class="ui centered row">
+      <div class="six wide column">
+        <div class="ui segment">
+          <h3>Basic Plan</h3>
+          <dl>
+            <dt>Free plan</dt>
+            <dd>Unilimited image uploads</dd>
+            <dd>Responsive design</dd>
+            <dd>Access anywhere</dd>
+
+          </dl>
+        </div>
+      </div>
+      <div class="six wide column">
+        <div class="ui segment">
+          <h3>Basic Plan</h3>
+          <dl>
+            <dt>Free plan</dt>
+            <dd>Unilimited image uploads</dd>
+            <dd>Responsive design</dd>
+            <dd>Access anywhere</dd>
+
+          </dl>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
