Add the apikey directly to the config file

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,11 @@
   @extend .error;
 }
 
-.jumbotron {
+.segment.jumbotron {
   text-align: center;
   background-image: asset-url('meeting.png');
+  background-size: cover;
+  color: #000;
+  font-size: xx-large;
+  height: 350px;
 }
