--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
             <dd>Unilimited image uploads</dd>
             <dd>Responsive design</dd>
             <dd>Access anywhere</dd>
-
+            <dd hidden>It must be hidden</dd>
           </dl>
         </div>
       </div>
