--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,13 @@
+<script language="Javascript">
+  Stripe.setPublishableKey("<%= Rails.application.credentials.dig(:stripe, :test_secret_key) %>");
+</script>
 <div class="ui relaxed equal width grid">
   <div class="ui row">
     <div class="ui three wide column"></div>
     <div class="ui ten wide column segment">
       <h2 class="ui center aligned dividing header"><i class="signup icon"></i>Sign up</h2>
       <div class="<%= "error" if resource.errors.any? %>">
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "ui form"}) do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {role: "form", class: "ui form cc_form"}) do |f| %>
           <div class="ui error message">
             <%= devise_error_messages! %>
           </div>
@@ -42,11 +45,11 @@
               <div class="nine wide field">
                 <div class="two fields">
                   <div class="field">
-                    <%= pay.label :card_expires, "Card Expires", data: {stripe: 'label'} %>
+                    <%= pay.label :card_expires, "Month Exp.", data: {stripe: 'label'} %>
                     <%= pay.select :card_expires_month, options_for_select(Payment.month_options), { include_blank: 'Month' }, data: {stripe: 'exp_month'}, class: "ui fluid search dropdown", required: true %>
                   </div>
                   <div class="field">
-                    <%= pay.label :card_expires, "Card Expires", data: {stripe: 'label'} %>
+                    <%= pay.label :card_expires, "Year Exp.", data: {stripe: 'label'} %>
                     <%= pay.select :card_expires_year, options_for_select(Payment.year_options), { include_blank: 'Year' }, data: {stripe: 'exp_year'}, class: "ui fluid search dropdown", required: true %>
                   </div>
                 </div>
