Fix sign-up buttons and Logo link

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="ui fixed inverted menu">
   <div class="ui container">
-    <a href="#" class="header item"><strong>PhotoApp</strong></a>
+    <%= link_to "PhotoApp", root_path, class: "ui header item" %>
     <%= link_to "Home", root_path, class: "active blue item" %>
     <a class="item">
       About
